--- a/bud-e/Base.lproj/Main.storyboard
+++ b/bud-e/Base.lproj/Main.storyboard
@@ -27,22 +27,6 @@
             </objects>
             <point key="canvasLocation" x="-484" y="604"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="FAA-7e-7Jc">
-            <objects>
-                <viewController id="wsG-NG-wKO" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="cAl-5g-W0n">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="2wC-Od-KWM"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="ma2-JJ-j2u"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NXE-wP-tOd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="423" y="-107"/>
-        </scene>
         <!--Tabs Controller-->
         <scene sceneID="9Vp-fE-mXT">
             <objects>
@@ -53,32 +37,77 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9z7-KC-uE9" kind="relationship" relationship="viewControllers" id="sTx-Ax-Q1e"/>
-                        <segue destination="Qke-N8-BSH" kind="relationship" relationship="viewControllers" id="u5N-gw-RwM"/>
+                        <segue destination="gY1-gX-2CZ" kind="relationship" relationship="viewControllers" id="gqq-Di-qll"/>
+                        <segue destination="Qke-N8-BSH" kind="relationship" relationship="viewControllers" id="j54-Pf-7hQ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3a7-OK-AUP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1396" y="-107"/>
         </scene>
-        <!--Item 1-->
-        <scene sceneID="E11-C4-N3d">
+        <!--Item-->
+        <scene sceneID="UGT-y6-K9I">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9z7-KC-uE9" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" id="6tb-Mg-hF9"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gY1-gX-2CZ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="OyY-lq-M6n"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fNd-lX-Jm3">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NAg-lH-oAi">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="wsG-NG-wKO" kind="relationship" relationship="rootViewController" id="DlM-uN-oo8"/>
+                        <segue destination="YAS-zg-Bc6" kind="relationship" relationship="rootViewController" id="V84-ta-13t"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SoJ-bu-HoW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jle-VK-RvD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-484" y="-107"/>
+        </scene>
+        <!--Devices List View Controller-->
+        <scene sceneID="OWg-ku-LGV">
+            <objects>
+                <viewController id="YAS-zg-Bc6" customClass="DevicesListViewController" customModule="bud_e" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8DF-3e-B41">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4bE-Qb-zVp">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="deviceCell" id="KSc-Jf-zw5">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KSc-Jf-zw5" id="BPh-EC-vyN">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="YAS-zg-Bc6" id="3fo-Az-cO2"/>
+                                    <outlet property="delegate" destination="YAS-zg-Bc6" id="EJv-S9-PcL"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4bE-Qb-zVp" firstAttribute="leading" secondItem="ICX-TM-pQ2" secondAttribute="leading" id="6pW-GO-OvZ"/>
+                            <constraint firstItem="ICX-TM-pQ2" firstAttribute="bottom" secondItem="4bE-Qb-zVp" secondAttribute="bottom" id="Fwj-GV-iMR"/>
+                            <constraint firstItem="4bE-Qb-zVp" firstAttribute="top" secondItem="ICX-TM-pQ2" secondAttribute="top" id="jtM-2a-oIO"/>
+                            <constraint firstItem="ICX-TM-pQ2" firstAttribute="trailing" secondItem="4bE-Qb-zVp" secondAttribute="trailing" id="rxz-Zp-9wf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ICX-TM-pQ2"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ikg-RR-B1w"/>
+                    <connections>
+                        <outlet property="devicesTableView" destination="4bE-Qb-zVp" id="n1G-yr-NV9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hiP-e9-jRI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="300" y="-107"/>
         </scene>
     </scenes>
 </document>
