--- a/bud-e/Base.lproj/Main.storyboard
+++ b/bud-e/Base.lproj/Main.storyboard
@@ -46,11 +46,11 @@
             </objects>
             <point key="canvasLocation" x="-1396" y="-107"/>
         </scene>
-        <!--Item-->
+        <!--Mes Périphériques-->
         <scene sceneID="UGT-y6-K9I">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gY1-gX-2CZ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="OyY-lq-M6n"/>
+                    <tabBarItem key="tabBarItem" title="Mes Périphériques" id="OyY-lq-M6n"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NAg-lH-oAi">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -65,7 +65,7 @@
             </objects>
             <point key="canvasLocation" x="-484" y="-107"/>
         </scene>
-        <!--Devices List View Controller-->
+        <!--Mes périphériques-->
         <scene sceneID="OWg-ku-LGV">
             <objects>
                 <viewController id="YAS-zg-Bc6" customClass="DevicesListViewController" customModule="bud_e" customModuleProvider="target" sceneMemberID="viewController">
@@ -121,7 +121,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ICX-TM-pQ2"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ikg-RR-B1w"/>
+                    <navigationItem key="navigationItem" title="Mes périphériques" id="ikg-RR-B1w"/>
                     <connections>
                         <outlet property="devicesCollection" destination="xm3-Q9-rAk" id="oZ4-y3-uo3"/>
                     </connections>
